A3/ebnf.txt
program := {statement}EOF.
statement := formula TERM.
formula := CONST | NOT formula | formula AND formula | formula OR formula  
	   | formula XOR formula | formula EQUALS formula | formula IMPLIES formula
	   | IF formula THEN formula ELSE formula | LPAREN formula RPAREN | ID
TERM := ";".
CONST := "TRUE" | "FALSE".
NOT := "NOT".
AND := "AND".
OR := "OR".
XOR := "XOR".
EQUALS := "EQUALS".
IMPLIES := "IMPLIES".
IF := "IF".
THEN := "THEN".
ELSE := "ELSE".
LPAREN := "(".
RPAREN := ")".
ID := Letter{Letter}.
Letter := UpperCase | LowerCase.
UpperCase := "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" |
	     "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" |.
LowerCase := "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" |
	     "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" |.


	   

